--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -11,31 +11,46 @@
 # -----------------
 en: &DEFAULT_EN
   header:
-    title: Welcome to our Studio!
-    text: It's Nice To Meet You
+    title: Welcome to FusionSuite!
+    text: The power of assets management <br>& IT service management
     button: Tell Me More
-    buttonlink: "#services"
+    buttonlink: "#features"
 
   services:
-    title: "Services"
+    title: "Features"
     text: "Lorem ipsum"
-    section: services
+    section: features
     list:
-      - title: "E-Commerce"
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
-        icon: fas fa-shopping-cart #find more at https://fontawesome.com/icons
-      - title: "Responsive Design"
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit."
-        icon: fas fa-laptop
-      - title: "[Markdown](https://en.wikipedia.org/wiki/Markdown)"
-        desc: "Your description here, full **Markdown** support"
-        icon: fab fa-markdown
-
-  portfolio:
-    title: "Portfolio"
-    text: "Lorem ipsum dolor sit amet consectetur."
-    section: portfolio
-    closebutton: "Close Project"
+      - title: "Free software"
+        desc: "FusionSuite is a free software with an open project management."
+        icon: fab fa-osi #find more at https://fontawesome.com/icons
+      - title: "Responsive"
+        desc: "FusionSuite has a web interface with responsive design: adapt to the screen of the device."
+        icon: fas fa-mobile-alt
+      - title: "REST API"
+        desc: "The backend offer a standard REST API and documented. Very good to integrated to other projects."
+        icon: fab fa-dev
+      - title: "Modern"
+        desc: "Built with powerfull technologies (Ionic/Angular, Slim/Eloquent), to ensure modern features and compatibility."
+        icon: fas fa-certificate
+      - title: "Databases"
+        desc: "Compatible MySQL, MariaDB, SQLite and Microsoft SQL Server."
+        icon: fas fa-database
+      - title: "Contributions welcome"
+        desc: "The contributions from the community are welcome on our [github](https://github.com/fusionSuite)."
+        icon: fab fa-github
+      - title: "Works with FusionInventory"
+        desc: "The backend has FusionInventory server code and works with FusionInventory agent."
+        icon: fas fa-heart
+      - title: "Chat with us<br>Chat between users"
+        desc: "Come chat with the FusionSuite team and with others users on our [Discord server](https://discord.gg/Kj72FwAKTC)."
+        icon: fas fa-comments
+      - title: "Secured"
+        desc: "Code, data and server security is a priority."
+        icon: fas fa-shield-alt
+      - title: "Performances"
+        desc: "The application is fast, we need this!"
+        icon: fas fa-fighter-jet
 
   timeline:
     title: "Timeline"
@@ -44,29 +59,38 @@ en: &DEFAULT_EN
     # left is the default
     #start_align: "left"
     events:
-      - title: "Our Humble Beginnings"
-        year: "2009-2011"
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!"
+      - title: "Announcement of the project"
+        year: "2022 January"
+        desc: "The project is revealed to the world. YEAH!"
         image: assets/img/timeline/1.jpg
-        alt:
-      - title: "An Agency is Born"
-        year: "March 2011"
-        desc: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!"
+        alt: 
+        align: right
+      - title: "POC is good !"
+        year: "2021 December"
+        desc: "The features code tested and the performances passes the validation to continue the project.<br>Creation of the logo and prepare the announcement."
         image: assets/img/timeline/2.jpg
-        alt:
-      - title: "Jekyll Theme is created"
-        year: "2019"
-        desc: "Ravi Riley converted Agency, a Bootstrap-based theme, into a Jekyll theme. The Jekyll theme can be installed as a Ruby gem, or remotely. For more information, visit the documentation."
+        alt: 
+        align: left
+      - title: "Enhance performances of the POC"
+        year: "2021 Septembre"
+        desc: "Very bad performances detected, many modifications & optimisations begins in the code to be more efficient."
         image: assets/img/timeline/3.jpg
-        alt: image alt text
-      - title: "Title"
-        year: "2009-2011"
-        desc: "Your description here, **Markdown** is fully supported."
+        alt: 
+        align: right
+      - title: "Specifications"
+        year: "2020 November"
+        desc: "Think about features and write specifications of the application."
+        image: assets/img/timeline/2.jpg
+        alt: 
+        align: left
+      - title: "POC launched"
+        year: "2020 March"
+        desc: "Begin of the POC after GLPI has pushed out the last community developers."
         image: assets/img/timeline/4.jpg
         alt:
         # you can enforce the alignment
         align: right
-    end: "Be Part <br> of Our <br> Story!"
+    end: "Our <br> great <br> story!"
 
   about:
     title: "About Us"
@@ -79,55 +103,38 @@ en: &DEFAULT_EN
     max-height: 100px
     horizontal-scrolling: "" #"yes/no"
     list:
-      - title: "envato"
+      - title: "DCS Easyware"
         url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/envato.jpg
+        logo: assets/img/clients/partner_dcs.png
+        desc: "Spécialiste du support, de la gestion des environnements utilisateurs et de la gestion des infrastructures (production et exploitation), DCS poursuit sa stratégie en développant notamment l'intégration de solutions afin d'augmenter la valeur de ses prestations et répondre aux enjeux de ses clients."
       - title: "designmodo"
         url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/designmodo.jpg
-      - title: "themeforest"
-        url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/themeforest.jpg
-      - title: "Creative Market"
-        url: https://github.com/raviriley/agency-jekyll-theme
-        logo: assets/img/clients/creative-market.jpg
+        logo: assets/img/clients/partner_probesys.png
+        desc: "La SCOP Probesys est une structure à taille humaine, dynamique, réactive et participative.<br>C'est une structure spécialisée en solutions libres et open source qui accompagne tout type de structures dans l'ensemble de leurs projets informatiques : Administration système et réseaux, développement web ou applicatif."
 
   team:
-    title: "OUR AMAZING TEAM"
-    text: "Lorem ipsum dolor sit amet consectetur."
-    subtext: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported.
+    title: "THE FUSIONSUITE TEAM"
+    text: "Let us introduce you to the people who make the FusionSuite project a reality."
+    subtext: 
     section: team
     people:
-      - name: "Kay Garland"
-        role: "Lead Designer"
-        image: assets/img/team/500x500.jpg
+      - name: "David Durieux"
+        role: "Project Leader"
+        image: assets/img/team/ddurieux.jpg
         social:
-          - url: https://twitter.com
+          - url: https://twitter.com/ddurieux_
             icon: fab fa-twitter
-          - url: https://facebook.com
-            icon: fab fa-facebook-f
-          - url: https://linkedin.com
+          - url: https://www.linkedin.com/in/david-durieux-2099459/
             icon: fab fa-linkedin-in
-      - name: "Larry Parker"
-        role: "Lead Marketer"
-        image: assets/img/team/2.jpg
+          - url: https://david.durieux.family
+            icon: fas fa-blog
+
+      - name: "Perhaps you!"
+        role: "Contact us to contribute!"
+        image: assets/img/team/you.png
         social:
-          - url: https://twitter.com
-            icon: fab fa-twitter
-          - url: https://facebook.com
-            icon: fab fa-facebook-f
-          - url: https://linkedin.com
-            icon: fab fa-linkedin-in
-      - name: "Diana Perterson"
-        role: "Lead Developer"
-        image: assets/img/team/500x500.jpg
-        social:
-          - url: https://twitter.com
-            icon: fab fa-twitter
-          - url: https://facebook.com
-            icon: fab fa-facebook-f
-          - url: https://linkedin.com
-            icon: fab fa-linkedin-in
+          - url: https://discord.gg/Kj72FwAKTC
+            icon: "fab fa-discord"
 
   contact:
     title: "Contact Us"
@@ -147,16 +154,12 @@ en: &DEFAULT_EN
   footer:
     legal: "Privacy Policy"
     social:
-      - url: https://twitter.com
+      - url: https://twitter.com/FusionSuite
         icon: "fab fa-twitter"
-      - url: https://facebook.com
-        icon: "fab fa-facebook-f"
-      - url: https://linkedin.com
-        icon: "fab fa-linkedin-in"
-      - url: https://github.com/raviriley/agency-jekyll-theme
+      - url: https://github.com/fusionSuite
         icon: "fab fa-github"
-      - url: https://instagram.com
-        icon: "fab fa-instagram"
+      - url: https://discord.gg/Kj72FwAKTC
+        icon: "fab fa-discord"
 en-US:
   <<: *DEFAULT_EN
 en-CA:
@@ -165,6 +168,163 @@ en-GB:
   <<: *DEFAULT_EN
 en-AU:
   <<: *DEFAULT_EN
+
+# Français
+# -------
+fr: &DEFAULT_FR
+  header:
+    title: Bienvenue sur FusionSuite!
+    text: The power of assets management <br>& IT service management
+    button: M'en dire plus
+    buttonlink: "#features"
+
+  services:
+    title: "Fonctionalités"
+    text: "Lorem ipsum"
+    section: features
+    list:
+      - title: "Logiciel libre"
+        desc: "FusionSuite is a free software with an open project management."
+        icon: fab fa-osi #find more at https://fontawesome.com/icons
+      - title: "Responsive"
+        desc: "FusionSuite has a web interface with responsive design: adapt to the screen of the device."
+        icon: fas fa-mobile-alt
+      - title: "REST API"
+        desc: "The backend offer a standard REST API and documented. Very good to integrated to other projects."
+        icon: fab fa-dev
+      - title: "Modern"
+        desc: "Built with powerfull technologies (Ionic/Angular, Slim/Eloquent), to ensure modern features and compatibility."
+        icon: fas fa-certificate
+      - title: "Databases"
+        desc: "Compatible MySQL, MariaDB, SQLite and Microsoft SQL Server."
+        icon: fas fa-database
+      - title: "Contributions welcome"
+        desc: "The contributions from the community are welcome on our [github](https://github.com/fusionSuite)."
+        icon: fab fa-github
+      - title: "Works with FusionInventory"
+        desc: "The backend has FusionInventory server code and works with FusionInventory agent."
+        icon: fas fa-heart
+      - title: "Chat with us<br>Chat between users"
+        desc: "Come chat with the FusionSuite team and with others users on our [Discord server](https://discord.gg/Kj72FwAKTC)."
+        icon: fas fa-comments
+      - title: "Secured"
+        desc: "Code, data and server security is a priority."
+        icon: fas fa-shield-alt
+      - title: "Performances"
+        desc: "The application is fast, we need this!"
+        icon: fas fa-fighter-jet
+
+  timeline:
+    title: "Timeline"
+    text: "Lorem ipsum timeline"
+    section: timeline
+    # left is the default
+    #start_align: "left"
+    events:
+      - title: "Announcement of the project"
+        year: "2022 January"
+        desc: "The project is revealed to the world. YEAH!"
+        image: assets/img/timeline/1.jpg
+        alt: 
+        align: right
+      - title: "POC is good !"
+        year: "2021 December"
+        desc: "The features code tested and the performances passes the validation to continue the project.<br>Creation of the logo and prepare the announcement."
+        image: assets/img/timeline/2.jpg
+        alt: 
+        align: left
+      - title: "Enhance performances of the POC"
+        year: "2021 Septembre"
+        desc: "Very bad performances detected, many modifications & optimisations begins in the code to be more efficient."
+        image: assets/img/timeline/3.jpg
+        alt: 
+        align: right
+      - title: "Specifications"
+        year: "2020 November"
+        desc: "Think about features and write specifications of the application."
+        image: assets/img/timeline/2.jpg
+        alt: 
+        align: left
+      - title: "POC launched"
+        year: "2020 March"
+        desc: "Begin of the POC after GLPI has pushed out the last community developers."
+        image: assets/img/timeline/4.jpg
+        alt:
+        # you can enforce the alignment
+        align: right
+    end: "Our <br> great <br> story!"
+
+  about:
+    title: "About Us"
+    text: "our story"
+    body: "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported."
+    section: about
+
+  clients:
+    section: clients
+    max-height: 100px
+    horizontal-scrolling: "" #"yes/no"
+    list:
+      - title: "DCS Easyware"
+        url: https://github.com/raviriley/agency-jekyll-theme
+        logo: assets/img/clients/partner_dcs.png
+        desc: "Spécialiste du support, de la gestion des environnements utilisateurs et de la gestion des infrastructures (production et exploitation), DCS poursuit sa stratégie en développant notamment l'intégration de solutions afin d'augmenter la valeur de ses prestations et répondre aux enjeux de ses clients."
+      - title: "designmodo"
+        url: https://github.com/raviriley/agency-jekyll-theme
+        logo: assets/img/clients/partner_probesys.png
+        desc: "La SCOP Probesys est une structure à taille humaine, dynamique, réactive et participative.<br>C'est une structure spécialisée en solutions libres et open source qui accompagne tout type de structures dans l'ensemble de leurs projets informatiques : Administration système et réseaux, développement web ou applicatif."
+
+  team:
+    title: "THE FUSIONSUITE TEAM"
+    text: "Let us introduce you to the people who make the FusionSuite project a reality."
+    subtext: 
+    section: team
+    people:
+      - name: "David Durieux"
+        role: "Project Leader"
+        image: assets/img/team/ddurieux.jpg
+        social:
+          - url: https://twitter.com/ddurieux_
+            icon: fab fa-twitter
+          - url: https://www.linkedin.com/in/david-durieux-2099459/
+            icon: fab fa-linkedin-in
+          - url: https://david.durieux.family
+            icon: fas fa-blog
+
+      - name: "Perhaps you!"
+        role: "Contact us to contribute!"
+        image: assets/img/team/you.png
+        social:
+          - url: https://discord.gg/Kj72FwAKTC
+            icon: "fab fa-discord"
+
+  contact:
+    title: "Contact Us"
+    text: "Lorem ipsum or call 123456789"
+    section: contact
+    name: "Name*"
+    name-validation: "Please enter your name."
+    email: "Email*"
+    email-validation: "Please enter your email address."
+    phone: "Phone Number"
+    phone-validation: "Please enter your phone number."
+    message: "Message*"
+    message-validation: "Please enter a message."
+    subject: "Contact Form Submission"
+    submit: "Send Message"
+
+  footer:
+    legal: "Privacy Policy"
+    social:
+      - url: https://twitter.com/FusionSuite
+        icon: "fab fa-twitter"
+      - url: https://github.com/fusionSuite
+        icon: "fab fa-github"
+      - url: https://discord.gg/Kj72FwAKTC
+        icon: "fab fa-discord"
+
+fr-FR:
+  <<: *DEFAULT_FR
 
 # Spanish
 # -------
@@ -189,12 +349,6 @@ es: &DEFAULT_ES
       - title: "[Markdown](https://en.wikipedia.org/wiki/Markdown)"
         desc: "Su descripción aquí, soporte completo de **Markdown**"
         icon: fab fa-markdown
-
-  portfolio:
-    title: "Portafolio"
-    text: "Lorem ipsum dolor sit amet consectetur."
-    section: portafolio
-    closebutton: "Cerrar Proyecto"
 
   timeline:
     title: "Cronología"
