--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ baseurl: "/" # the subpath of your site, e.g. /blog
 
 title      : FusionSuite
 email      : david@durieux.family #this is also the email contact forms will go to
-description: "Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!"
-author     : Your Name
-# logo:     #optional, defaults to site title
-  # path: assets\img\clients\creative-market.jpg
-  # height: 60 #height in px, defaults to 52px
+description: "FusionSuite project - free software - Assets management and IT service management"
+author     : David Durieux
+logo:     #optional, defaults to site title
+  path: assets\img\logo_fusionsuite.png
+  height: 60 #height in px, defaults to 52px
 
 locale: "en-US" # See available languages in _data/sitetext.yml
 
